fixed the alignment. need to build the tables now

--- a/src/Pages/RiskTables/risktables.scss
+++ b/src/Pages/RiskTables/risktables.scss
@@ -11,7 +11,14 @@ $color: #149887;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  
+  .grid {
+    overflow: hidden;
+    width: 100vw;
+  }
+  .table {
+    height: max-content;
+    vertical-align: middle;
+  }
   h1 {
     margin-bottom: 14vh;
     text-align: center;
